# RecordFlux

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pylintrc  .travis.yml  CHANGELOG.md  Cargo.toml  MANIFEST.in  Makefile  Makefile.common  Pipfile  README.md  SECURITY.md  build.py  defaults.adc  defaults.gpr  dissector.gpr  ethernet_dissector.adb  ethernet_dissector.ads  generator.py  model.py  mypy.ini  parser  parser.py  pyproject.toml  pyproject.toml.in  pytest.ini  requirements.txt  rflx  rflx_lang  rust-requirements.txt  rust-toolchain.toml  setup.py  switches.gpr  test.gpr  types.adb  (+1 more)
.config/: pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  design-decision.md  vulnerability.md
.github/workflows/: CI.yml  codeql-analysis.yml  deploy.yml  edge_tests.yml  fixup.yml  pages.yml  publishing.yml  tests.yml
.gitlab/issue_templates/: Architectural Decision.md  Release.md
doc/: Design-Guide.md  Development.md  Language-Reference.adoc  Language-Reference.md  Limitations.md  User-Guide.adoc  conf.py  index.rst
doc/_templates/: custom_class.rst  custom_module.rst
doc/development_guide/: index.rst
doc/examples/: Makefile  pub_sub.gpr
doc/language_reference/: Makefile  conf.py  index.rst  language_reference.rst  verbal_mapping.json
doc/user_guide/: 10-introduction.rst  20-overview.rst  90-appendix.rst  90-rflx--help.txt  90-rflx-check--help.txt  90-rflx-convert--help.txt  90-rflx-doc--help.txt  90-rflx-generate--help.txt  90-rflx-graph--help.txt  90-rflx-install--help.txt  90-rflx-optimize--help.txt  90-rflx-run_ls--help.txt  90-rflx-setup_ide--help.txt  90-rflx-validate--help.txt  Makefile  conf.py  index.rst  recordflux_ug.rst  user_guide.rst  validator_example.txt
examples/: icmp_socket.py
examples/apps/: icmp_socket.py
examples/minipng/: .gitignore  minipng.gpr  minipng.rflx
examples/ping/: .gitignore  ping.gpr  ping.py
examples/specs/: .gitattributes  .gitignore  .isort.cfg  .mypy.ini  Makefile  README.md  arp.rflx  arp_parameters.rflx  atm.rflx  ber.rflx  bootp_dhcp_parameters.rflx  cbor.rflx  checksum.py  dhcp.rflx  ethernet.rflx  http_2.rflx  iana.rflx  icmp.rflx  icmpv6.rflx  igmp.rflx  in_ethernet.rflx  in_ipv4.rflx  in_ipv6.rflx  ipv4.rflx  ipv6.rflx  ipv6_address.rflx  mqtt.rflx  ppp.rflx  pppoe.rflx  protocol_numbers.rflx  quic.rflx  requirements.txt  slpv2.rflx  snmp.rflx  tcp.rflx  tls_alert.rflx  tls_common.rflx  tls_extensiontype_values.rflx  tls_handshake.rflx  tls_heartbeat.rflx  (+4 more)
ide/gnatstudio/: recordflux.py
ide/vscode/: .gitignore  .gitlab-ci.yml  .prettierignore  Makefile  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.base.json
language/: generate.py  lexer.py  parser.py  rflx_ast.py
librapidflux/: Cargo.toml
librapidflux/src/: consts.rs  diagnostics.rs  expr.rs  identifier.rs  lib.rs  source_code.rs  ty.rs
librapidflux/src/diagnostics/: error.rs  errors.rs  location.rs  locations.rs  logging.rs  mod.rs
librapidflux/tests/data/: sample.rflx
parser/: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pylintrc  CHANGELOG.md  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
parser/.github/: pull_request_template.md
parser/.gitlab/: CODEOWNERS
parser/disttools/: MANIFEST.in  gprgen.py  librflxlang.gpr  setup.py
parser/language/: ast.py  generate.py  lexer.py  parser.py  rflx_ast.py
parser/tests/: grammar_test.py  parser_test.py  specs_test.py  test_grammar.py  test_parser.py  (+2 more)
prototypes/: variable_length_integer_encoding.py
rapidflux/: Cargo.toml
rapidflux/src/: consts.rs  diagnostics.rs  error.rs  expr.rs  identifier.rs  lib.rs  logging.rs  source_code.rs  ty.rs  utils.rs
rapidflux/src/diagnostics/: error.rs  errors.rs  location.rs  locations.rs  mod.rs
rflx/: __init__.py  __main__.py  ada.py  ada_parser.py  ada_prefix.py  cli.py  common.py  const.py  contract.py  declaration.py  error.py  expr.py  expr_conv.py  expr_proof.py  expression.py  fatal_error.py  fsm.py  fsm_declaration.py  fsm_expression.py  fsm_parser.py  generator.py  graph.py  identifier.py  integration.py  ir.py  model.py  parser.py  rapidflux.pyi  session.py  sessionfile.py  spark.py  statement.py  tac.py  ty.py  typing_.py  validator.py  version.py
specs/: coap.rflx  dns.rflx  ethernet.rflx  icmp.rflx  in_ethernet.rflx  in_ipv4.rflx  ipv4.rflx  tls_alert.rflx  tls_handshake.rflx  tls_heartbeat.rflx  tls_record.rflx  tlv.rflx  tlv_with_checksum.rflx  udp.rflx
src/: spark-assertions.ads  spark-file_io.adb  spark-file_io.ads  spark-text_io.adb  spark-text_io.ads  types.adb  types.ads
stubs/: pydotplus.pyi  tai64_bindings.pyi  z3.pyi
tests/: README.md  __init__.py  array_message.rflx  array_type  array_type.rflx  arrays-av_enumeration_vector.adb  arrays-av_enumeration_vector.ads  arrays-enumeration_vector.adb  arrays-enumeration_vector.ads  arrays-generic_message.adb  arrays-generic_message.ads  arrays-message.adb  arrays-message.ads  arrays-modular_vector.adb  arrays-modular_vector.ads  arrays-range_vector.adb  arrays-range_vector.ads  arrays-tests.adb  arrays-tests.ads  arrays.adb  arrays.ads  aspect.rflx  benchmark.py  client_handshake_states.yml  client_record_states.yml  conftest.py  const.py  context.rflx  context_cycle_2.rflx  derivation-enumeration_vector.ads  derivation-message.ads  derivation-tests.adb  derivation-tests.ads  derivation.ads  derived_type  derived_type.rflx  duplicate_type.rflx  empty_package.rflx  enumeration-generic_message.adb  enumeration-generic_message.ads  (+172 more)
tools/: benchmark.py  check_dependencies.py  check_doc.py  check_grammar.py  check_packages.py  check_pip_version.py  check_readme.py  check_requirements.py  check_rust_attributes.py  check_unit_test_file_coverage.py  create_python_wheels_archive.sh  extract_ci_jobs.py  extract_packets.py  fuzz_driver.py  generate_gpr_file.py  generate_spark_test_code.py  generate_spark_test_runner.py  gnatprove  pre-commit  rflx_pylint_checker.py  rflxlexer.py  test_rapidflux_coverage.sh  upgrade_dependencies.py  write_version.py
(+4590 files in other folders)
