[package]
name = "librapidflux"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
annotate-snippets = { workspace = true }
anstream = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
indoc = "2.0.5"
pretty_assertions = "1.4.0"
rstest = "0.19.0"
serial_test = "3.1.1"
