[package]
name = "librapidflux"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
annotate-snippets = { workspace = true }
anstream = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
owo-colors = "4.0.0"
serde = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.61"

[dev-dependencies]
bincode = { workspace = true }
indoc = "2.0.5"
pretty_assertions = "1.4.0"
rstest = "0.19.0"
serial_test = "3.1.1"
