[package]
name = "rapidflux"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rapidflux"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
anstream = "0.6.13"
librapidflux = { path = "../librapidflux" }
bincode = { workspace = true }
pyo3 = { version = "0.21.1", features = ["extension-module"] }
serde = { workspace = true }
lazy_static = "1.4.0"
